V4066: General Update Part1

--- a/Prevu.Synoptics.V4066_BRR/Pages/P268.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P268.xaml
@@ -19,7 +19,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="191" RenderTransformOrigin="0.5,0.5" StatusComponent="234-01-MA1" PipeHeight="Medium" Canvas.Left="467" Canvas.Top="56"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="141" RenderTransformOrigin="0.5,0.5" StatusComponent="278-01-MA1" Color="Air" Canvas.Left="508" Canvas.Top="734" />
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="51" RenderTransformOrigin="0.5,0.5" StatusComponent="278-01-MA1" Color="Air" Canvas.Left="598" Canvas.Top="734" />
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="101" RenderTransformOrigin="0.5,0.5" StatusComponent="268-31-CV1" Color="Air" Canvas.Left="558" Canvas.Top="185"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="315" RenderTransformOrigin="0.5,0.5" StatusComponent="269-01-MA1" Color="Air" Canvas.Left="674" Canvas.Top="278"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="229" RenderTransformOrigin="0.5,0.5" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="685" Canvas.Top="733" />
@@ -31,7 +31,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="268-01-MA1" PipeHeight="Medium" Canvas.Left="632" Canvas.Top="534" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="128" RenderTransformOrigin="0.5,0.5" StatusComponent="268-01-MA1" PipeHeight="Medium" Canvas.Left="597" Canvas.Top="569" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -45,7 +45,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="126" RenderTransformOrigin="0.5,0.5" StatusComponent="276-01-MA1" PipeHeight="Medium" Canvas.Left="598" Canvas.Top="656" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="276-01-MA1" PipeHeight="Medium" Canvas.Left="635" Canvas.Top="693" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -73,14 +73,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="97" RenderTransformOrigin="0.5,0.5" StatusComponent="278-02-MA1" Color="Air" Canvas.Left="393" Canvas.Top="687" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="44" RenderTransformOrigin="0.5,0.5" StatusComponent="278-02-MA1" Color="Air" Canvas.Left="466" Canvas.Top="707" HorizontalAlignment="Center" VerticalAlignment="Top" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Machines:VRC_WaterCollectingTank Canvas.Left="646" Canvas.Top="151" Width="30" Height="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44"  RenderTransformOrigin="0.5,0.5" Canvas.Left="782" Canvas.Top="400"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="630" Canvas.Top="697" Height="55" Width="68" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -92,34 +84,18 @@
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="779" Canvas.Top="255" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="463" Canvas.Top="712" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="561" Canvas.Top="712" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_SA_Elutriator Canvas.Left="609" Canvas.Top="257" Height="274" Width="106" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="631" Canvas.Top="158" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="774" Canvas.Top="332" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VS_Airlock Canvas.Left="631" Canvas.Top="545" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="417" Canvas.Top="672" Height="35" Width="38" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
-            <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                </TransformGroup>
-            </Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
-        </Machines:V01_VT_CMM_Blower_Air_Compressor>
-        <Rectangle Height="39" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="565" Canvas.Top="698" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="558" Canvas.Top="729" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="2" Stroke="Black" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="661" Canvas.Top="672" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="653" Canvas.Top="665" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="39" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="393" Canvas.Top="670" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VS_Airlock Canvas.Left="631" Canvas.Top="625" Height="60" Width="60" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="268-01-MA1" JumpToLabel="234-01-MA1" Canvas.Left="399" Canvas.Top="26"/>
         <Labels:JumpLabel JumpFromLabel="278-01-MA1" JumpToLabel="300-41-LT1" Canvas.Left="880" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="268-01-MA1" JumpToLabel="244-01-MA1" Canvas.Left="842" Canvas.Top="26" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="273-01-MA1" Canvas.Left="842" Canvas.Top="338" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="269-01-MA1" Canvas.Left="759" Canvas.Top="200" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="268-01-MA1" Canvas.Left="685" Canvas.Top="117"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="276-01-MA1" Canvas.Left="697" Canvas.Top="551" />
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="278-01-MA1" Canvas.Left="443" Canvas.Top="771" />
         <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="268-31-CV1" Canvas.Left="501" Canvas.Top="117"/>
-        <Labels:DeviceLabel ComponentName="278-02-MA1" Canvas.Left="391" Canvas.Top="617" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="278-43-PT1" Canvas.Left="521" Canvas.Top="655" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="278-41-LS1" Canvas.Left="697" Canvas.Top="648" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="278-TRP" DetailsPageName="D278" Canvas.Left="570" Canvas.Top="649" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
