--- a/Prevu.Synoptics.V4066_BRR/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P880.xaml
@@ -57,23 +57,23 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="305" StatusComponent="882-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="315" Canvas.Top="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="88" StatusComponent="880-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="249" Canvas.Top="443" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="88" StatusComponent="880-01-ME1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="249" Canvas.Top="443" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="76" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" Color="Air" Canvas.Left="187" Canvas.Top="616" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="129" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" Canvas.Left="21" Canvas.Top="616" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="885-01-MA1" Canvas.Left="134" Canvas.Top="580" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="43" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" Color="Air" Canvas.Left="187" Canvas.Top="616" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="129" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ME1" Canvas.Left="21" Canvas.Top="616" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ME1" Canvas.Left="134" Canvas.Top="580" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="438" StatusComponent="886-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="-196" Canvas.Top="399" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Width="438" StatusComponent="880-01-ME1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="-196" Canvas.Top="399" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -88,42 +88,42 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="259" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" Canvas.Left="21" Canvas.Top="181" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" Canvas.Left="328" Canvas.Top="181" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="30" StatusComponent="886-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="421" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="259" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ME1" Canvas.Left="21" Canvas.Top="181" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ME1" Canvas.Left="328" Canvas.Top="181" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="30" StatusComponent="880-01-ME1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="421" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="294" StatusComponent="880-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="181" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="294" StatusComponent="880-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="181" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="357" Canvas.Top="800" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
+        <Labels:Pipe Width="108" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ME1" Canvas.Left="357" Canvas.Top="800" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1" Canvas.Left="255" Canvas.Top="803" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="887-01-MA1" Canvas.Left="302" Canvas.Top="763" HorizontalAlignment="Center" VerticalAlignment="Top" PipeHeight="Medium" >
+        <Labels:Pipe Width="52" RenderTransformOrigin="0.5,0.5" StatusComponent="880-01-ME1" Canvas.Left="302" Canvas.Top="763" HorizontalAlignment="Center" VerticalAlignment="Top" PipeHeight="Medium" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="42" StatusComponent="880-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="144" Canvas.Top="504" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="42" StatusComponent="880-01-ME1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="144" Canvas.Top="504" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="132" StatusComponent="880-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="163" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="132" StatusComponent="880-01-ME1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="163" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="53" StatusComponent="880-01-ES6" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="423" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="192" RenderTransformOrigin="0.5,0.5" StatusComponent="884-01-MA1" Color="Air" Canvas.Left="694" Canvas.Top="762" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="884-01-MA1" Canvas.Left="592" Canvas.Top="762" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="30" RenderTransformOrigin="0.5,0.5" StatusComponent="884-01-MA1" Canvas.Left="618" Canvas.Top="762" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="883-01-MA1" Canvas.Left="634" Canvas.Top="727" Color="ByProduct" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -171,7 +171,7 @@
         <Machines:VRC_WaterCollectingTank Height="45" Width="22" Canvas.Left="299" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="249" Canvas.Top="196" Height="234" Width="257" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Height="51" Stroke="Black" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="312" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="229" Canvas.Top="592" RenderTransformOrigin="0.5,0.5" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="205" Canvas.Top="594" RenderTransformOrigin="0.5,0.5" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -179,20 +179,20 @@
             </Machines:V01_VT_CMM_Blower_Air_Compressor.RenderTransform>
         </Machines:V01_VT_CMM_Blower_Air_Compressor>
         <Machines:V01_VS_Airlock Canvas.Left="140" Canvas.Top="512" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_ScarpaTrasporto Canvas.Left="126" Canvas.Top="582" Height="46" Width="73" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:V01_ScarpaTrasporto Canvas.Left="136" Canvas.Top="584" Height="46" Width="54" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Machines:V01_ScarpaTrasporto.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
                 </TransformGroup>
             </Machines:V01_ScarpaTrasporto.RenderTransform>
         </Machines:V01_ScarpaTrasporto>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="372" Canvas.Top="591" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="393" Canvas.Top="591" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="449" Canvas.Top="511" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_ScarpaTrasporto Canvas.Left="442" Canvas.Top="580" Height="46" Width="73" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="450" Canvas.Top="584" Height="46" Width="54" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="225" Canvas.Top="780" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_VS_Airlock Canvas.Left="303" Canvas.Top="700" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="295" Canvas.Top="769" Height="46" Width="74" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="563" Canvas.Top="739" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="577" Canvas.Top="740" Height="50" Width="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="640" Canvas.Top="659" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_ScarpaTrasporto Canvas.Left="633" Canvas.Top="728" Height="46" Width="73" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_EC_FiltroManiche Canvas.Left="1168" Canvas.Top="130" Width="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -200,7 +200,7 @@
         <Machines:V01_Material_Inlet_Outlet Canvas.Left="1072" Canvas.Top="119" Height="60" Width="42" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1055" Canvas.Top="464" Height="86" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_BBF_DoubleBag Canvas.Left="994" Canvas.Top="591" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <TextBlock TextWrapping="Wrap" Height="60" Width="213" TextAlignment="Center" FontSize="20" Foreground="White" Text="{lex:Loc FLAKES SORTER EXHAUST}" Canvas.Left="859" Canvas.Top="119" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <TextBlock TextWrapping="Wrap" Height="60" Width="213" TextAlignment="Center" FontSize="20" d:Foreground="White" Text="{lex:Loc FLAKES SORTER EXHAUST}" Canvas.Left="859" Canvas.Top="119" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="880-01-EC1" JumpToLabel="878-01-MA1" Canvas.Left="104" Canvas.Top="27" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="888-01-MA1" JumpToLabel="889-31-CV1" Canvas.Left="429" Canvas.Top="771" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DetailsLabel ComponentName="880-HOPPER" DetailsPageName="D880" HideComponentName="True" Canvas.Left="363" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -208,17 +208,15 @@
         <Labels:DetailsLabel ComponentName="899-BAGS" DetailsPageName="D899" Canvas.Left="1111" Canvas.Top="645" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="880-42-LEV" Canvas.Left="395" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="880-41-LEV" Canvas.Left="265" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="880-01-EC1" Canvas.Left="209" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="880-01-ME1" Canvas.Left="209" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="880-01-ES6" Canvas.Left="458" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="880-41-LS4" Canvas.Left="304" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="886-01-MA1" Canvas.Left="209" Canvas.Top="536" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="885-01-MA1" Canvas.Left="39" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="510" />
-        <Labels:DeviceLabel ComponentName="882-01-MA1" Canvas.Left="352" Canvas.Top="536" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="881-01-MA1" Canvas.Left="503" Canvas.Top="510" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="888-01-MA1" Canvas.Left="205" Canvas.Top="725" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="887-01-MA1" Canvas.Left="357" Canvas.Top="699" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="884-01-MA1" Canvas.Left="543" Canvas.Top="684" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel ComponentName="883-01-MA1" Canvas.Left="694" Canvas.Top="658" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="899-31-CV1" Canvas.Left="1091" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="886-TRP" DetailsPageName="D886" Canvas.Left="204" Canvas.Top="537" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="882-TRP" DetailsPageName="D882" Canvas.Left="392" Canvas.Top="533" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="888-TRP" DetailsPageName="D888" Canvas.Left="123" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="884-TRP" DetailsPageName="D884" Canvas.Left="577" Canvas.Top="676" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
