--- a/Prevu.Synoptics.V4066_BRR/Pages/P890.xaml
+++ b/Prevu.Synoptics.V4066_BRR/Pages/P890.xaml
@@ -91,7 +91,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="135" StatusComponent="926-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="889" Canvas.Top="122" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="78" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="889-31-CV1" VisibilitySignal="LS2" Canvas.Left="995" Canvas.Top="108" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="78" StatusComponent="880-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="889-31-CV1" VisibilitySignal="LS2" Canvas.Left="995" Canvas.Top="108" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -114,9 +114,9 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="768" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="889-31-CV1" VisibilitySignal="LS2" Canvas.Left="270" Canvas.Top="73" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="108" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="100" Canvas.Top="73" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="26" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="889-31-CV1" VisibilitySignal="LS1" Canvas.Left="268" Canvas.Top="110" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="768" StatusComponent="880-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="889-31-CV1" VisibilitySignal="LS2" Canvas.Left="270" Canvas.Top="73" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="108" StatusComponent="880-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="100" Canvas.Top="73" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="26" StatusComponent="880-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="889-31-CV1" VisibilitySignal="LS1" Canvas.Left="268" Canvas.Top="110" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="458" StatusComponent="892-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="389" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -187,7 +187,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="96" StatusComponent="888-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="241" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="889-31-CV1" VisibilitySignal="LS1">
+        <Labels:Pipe Width="96" StatusComponent="880-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="241" Canvas.Top="154" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="889-31-CV1" VisibilitySignal="LS1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
