V7186 update PIT detail buttons on synoptic page

--- a/Prevu.Synoptics.V7186_Aliplast/Details/D081.xaml
+++ b/Prevu.Synoptics.V7186_Aliplast/Details/D081.xaml
@@ -13,7 +13,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="410" Width="387">
         <Machines:V01_PSP_Pit_wAgitator Width="335" VerticalAlignment="Center" Canvas.Top="115" TrendName="LEVEL" Canvas.Left="31" Height="229" HorizontalAlignment="Left" ComponentName="081-41-LT1"/>
-        <Labels:Pipe Width="252" VerticalAlignment="Top" Canvas.Top="176" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="22" HorizontalAlignment="Left" Color="Water">
+        <Labels:Pipe Width="252" VerticalAlignment="Top" Canvas.Top="176" StatusComponent="081-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="22" HorizontalAlignment="Left" Color="Water" VisibilityComponent="081-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
