--- a/Prevu.Synoptics.V6120_Novatex/Pages/P810.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P810.xaml
@@ -305,7 +305,7 @@
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="170" Canvas.Top="799" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="848" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:Waste Height="46" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="1441" Canvas.Top="290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="873-BAG" DetailsPageName="D873" HideComponentName="True" Canvas.Left="795" Canvas.Top="775" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="873-VIEW" DetailsPageName="D873" HideComponentName="True" Canvas.Left="795" Canvas.Top="775" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="830-VIEW" DetailsPageName="D830" Canvas.Left="648" Canvas.Top="70" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="131" Canvas.Top="178" />
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="403" Canvas.Top="139"/>
