--- a/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
+++ b/Prevu.Synoptics.V6120_Novatex/Pages/P880.xaml
@@ -132,14 +132,14 @@
         <Labels:Pipe Width="179" StatusComponent="895-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="516" Canvas.Top="377" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="408" StatusComponent="880-01-ES2" RenderTransformOrigin="0.5,0.5" Canvas.Left="374" Canvas.Top="810" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
         <Labels:Pipe Width="165" StatusComponent="880-01-ES3" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="510" Canvas.Top="716" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="160" StatusComponent="890-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="868" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="160" StatusComponent="890-01-ES2" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="868" Canvas.Top="477" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="110" StatusComponent="890-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="859" Canvas.Top="474" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="110" StatusComponent="890-01-ES2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="859" Canvas.Top="474" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -170,15 +170,15 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="46" StatusComponent="890-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="697" Canvas.Top="254" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="276" StatusComponent="890-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="603" Canvas.Top="391" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="46" StatusComponent="890-01-ES2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="697" Canvas.Top="254" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="276" StatusComponent="890-01-ES2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="603" Canvas.Top="391" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="30" StatusComponent="890-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="739" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="30" StatusComponent="890-01-ES2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="739" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="143" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1182" Canvas.Top="778" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="68" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1153" Canvas.Top="749" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -188,7 +188,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="49" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1356" Canvas.Top="778" VisibilityComponent="908-32-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:Pipe Width="129" StatusComponent="890-01-EC1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="787" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="129" StatusComponent="890-01-ES2" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="787" Canvas.Top="527" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="172" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" PipeHeight="Medium" Canvas.Left="1258" Canvas.Top="629" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="96" StatusComponent="908-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1214" Canvas.Top="672" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -197,8 +197,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="83" RenderTransformOrigin="0.5,0.5" StatusComponent="920-01-EC1" PipeHeight="Medium" Canvas.Left="1191" Canvas.Top="458" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="104" StatusComponent="920-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1142" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="83" RenderTransformOrigin="0.5,0.5" StatusComponent="920-01-ES2" PipeHeight="Medium" Canvas.Left="1191" Canvas.Top="458" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="104" StatusComponent="920-01-ES2" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1142" Canvas.Top="505" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -258,9 +258,9 @@
         <Labels:DeviceLabel ComponentName="893-41-LS1" Canvas.Left="532" Canvas.Top="646" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="880-01-EC1" Canvas.Left="383" Canvas.Top="570" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="895-41-LS1" Canvas.Left="808" Canvas.Top="448" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="890-01-EC1" Canvas.Left="1004" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="890-01-EC1" Canvas.Left="1009" Canvas.Top="383" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="890-41-LEV" Canvas.Left="892" Canvas.Top="224" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="898-01-MA1" Canvas.Left="1027" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="898-01-MA1" Canvas.Left="1028" Canvas.Top="498" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="908-01-MA1" Canvas.Left="837" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="906-01-MA1" Canvas.Left="1109" Canvas.Top="608" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="908-43-PT1" Canvas.Left="942" Canvas.Top="638" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -271,5 +271,6 @@
         <Labels:JumpLabel JumpFromLabel="898-01-MA1" JumpToLabel="920-01-EC1" Canvas.Left="1246" Canvas.Top="428" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left" />
         <Labels:JumpLabel JumpFromLabel="908-01-MA1" JumpToLabel="948-31-CV1" Canvas.Left="1421" Canvas.Top="599" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:JumpLabel JumpFromLabel="880-01-ES3" JumpToLabel="893-01-MA1" Canvas.Left="653" Canvas.Top="684" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="890-01-ES2" Canvas.Left="1009" Canvas.Top="321" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
