--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P608.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P608.xaml
@@ -172,7 +172,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" StatusComponent="557-02-MA1" PipeHeight="Medium" Canvas.Left="41" Canvas.Top="568" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="160" RenderTransformOrigin="0.5,0.5" StatusComponent="557-01-EC1" PipeHeight="Medium" Canvas.Left="41" Canvas.Top="568" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
