--- a/Prevu.Synoptics.V3960_CristalPet/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3960_CristalPet/Pages/P940.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P940" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="123" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="978" Canvas.Top="509" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="123" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="978" Canvas.Top="509" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="379" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="1151" Canvas.Top="738" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Canvas.Left="1049" Canvas.Top="738" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:Pipe Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="955-01-MA1" Canvas.Left="1091" Canvas.Top="703" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" >
@@ -23,8 +23,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="187" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="937" Canvas.Top="587" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="58" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1093" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="187" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="937" Canvas.Top="587" Color="ByProduct" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:Pipe Width="58" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1093" Canvas.Top="614" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -34,7 +34,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="126" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1036" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="126" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1036" Canvas.Top="448" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -44,8 +44,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="85" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Color="ByProduct" Canvas.Left="1097" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-ECS3" Canvas.Left="1147" Canvas.Top="418" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="85" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Color="ByProduct" Canvas.Left="1097" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="ByProduct" Width="66" RenderTransformOrigin="0.5,0.5" StatusComponent="950-01-EC1" Canvas.Left="1147" Canvas.Top="418" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -65,7 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="158" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="703" Canvas.Top="579" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="158" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="703" Canvas.Top="579" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -118,7 +118,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="262" StatusComponent="940-01-ECS2" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="211" Canvas.Top="547">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="262" StatusComponent="940-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="211" Canvas.Top="547">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -128,7 +128,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="42" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="362" Canvas.Top="452">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="42" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="362" Canvas.Top="452">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -138,7 +138,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="403" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="381" Canvas.Top="471"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="403" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="381" Canvas.Top="471"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="110" StatusComponent="898-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="740" Canvas.Top="152" VisibilityComponent="939-21-CV1" VisibilitySignal="LS2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -215,7 +215,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="200" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="839" Canvas.Top="489" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="200" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="839" Canvas.Top="489" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -225,7 +225,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="106" StatusComponent="950-01-ECS3" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="927" Canvas.Top="458" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="106" StatusComponent="950-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="927" Canvas.Top="458" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -236,7 +236,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="709" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="821" Canvas.Top="110" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="12" StatusComponent="940-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="776" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="12" StatusComponent="940-01-EC1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="776" Canvas.Top="475" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -306,12 +306,10 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-61-LEV" Canvas.Left="776" Canvas.Top="207"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-01-EC1" Canvas.Left="838" Canvas.Top="369"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-01-ECS2" Canvas.Left="700" Canvas.Top="315"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="950-01-ECS3" Canvas.Left="986" Canvas.Top="316"/>
         <Labels:DeviceLabel ComponentName="939-21-CV1" Canvas.Left="241" Canvas.Top="36" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="947-01-MA1" Canvas.Left="831" Canvas.Top="675" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="945-01-MA1" Canvas.Left="661" Canvas.Top="649" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DeviceLabel ComponentName="940-01-EC1" Canvas.Left="395" Canvas.Top="322" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="940-01-ECS2" Canvas.Left="394" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="940-01-EC1" Canvas.Left="396" Canvas.Top="369" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="940-61-LEV" Canvas.Left="297" Canvas.Top="217" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="964-71-ECS2" Canvas.Left="445" Canvas.Top="766" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="950-61-LS4" Canvas.Left="736" Canvas.Top="30" HorizontalAlignment="Left" VerticalAlignment="Center"/>
